<resources>
    <string name="app_name">Introtuce_Nayan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Users</string>
    <string name="tab_text_2">Enroll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="rationale_location_contacts">Storage permission</string>
</resources>