<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.EnrollFragment">

        <LinearLayout
            android:id="@+id/select_photo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/select_profile_photo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/first_name"
            android:inputType="textCapSentences|textCapWords"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/last_name"
            android:inputType="textCapSentences|textCapWords"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:padding="@dimen/_8sdp"
            android:text="Date of birth"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="textStart"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="Gender"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="Country"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="State"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/home_towm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="Home Town"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/telephone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/add_user_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_background"
            android:text="ADD USER"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>